resources/css/layout-documentation-page.css
#documentation-page-menu-toggle {
  display: none;
}

.documentation-page {
  --spacing-content-vertical: var(--spacing-2x);

  display: grid;
  width: 100%;

  @media (max-width: 900px) {
    grid-template-areas: "menu" "content";
    grid-template-rows: var(--height-page-navigation) 1fr;
    height: 100%;
  }
  @media (min-width: 900px) {
    border-bottom: 1px solid var(--color-separator);
    column-gap: var(--spacing-base);
    grid-template-areas: "menu content toc";
    grid-template-columns: 300px minmax(auto, 74ch) 240px;
    justify-content: space-between;
  }
}

.documentation-page__content {
  display: flex;
  flex-direction: column;
  grid-area: content;
  justify-content: space-between;
  padding: var(--spacing-content-vertical) var(--spacing-base)
    var(--spacing-base) var(--spacing-base);
  row-gap: var(--spacing-2x);
  width: 100%;

  @media (max-width: 900px) {
    margin-top: var(--height-documentation-navigation);
  }
}

@media (max-width: 900px) {
  body:has(#documentation-page-menu-toggle:checked) {
    overflow-y: hidden;
  }

  #documentation-page-menu-toggle:checked {
    & ~ .documentation-page__menu__content {
      display: flex;
      flex-direction: column;
      height: calc(
        100dvh - var(--height-documentation-navigation) -
          var(--height-page-navigation)
      );
      overflow-y: scroll;
      padding: var(--spacing-half);
      row-gap: var(--spacing-2x);
    }

    & ~ .documentation-page__menu__title::after {
      content: "▲";
    }
  }

  .documentation-page__menu {
    background-color: #111;
    color: white;
    display: flex;
    flex-direction: column;
    grid-area: menu;
    position: fixed;
    top: var(--height-page-navigation);
    width: 100%;
    z-index: var(--z-index-primary-navigation);
  }

  .documentation-page__menu__content {
    display: none;
  }

  .documentation-page__menu__link {
    padding: var(--spacing-half);
    text-decoration: none;
  }

  .documentation-page__menu__link.documentation-page__menu__link--active {
    background-color: #333;
    border-radius: 20px 20%;
  }

  .documentation-page__menu__section {
    display: flex;
    flex-direction: column;
  }

  .documentation-page__menu__section__content {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
  }

  .documentation-page__menu__section__title {
    font-weight: bold;
    padding: var(--spacing-half);
  }

  .documentation-page__menu__title {
    align-items: center;
    column-gap: var(--spacing-half);
    cursor: pointer;
    display: flex;
    height: var(--height-documentation-navigation);
    padding: 0 var(--spacing-base);

    &::after {
      content: "▼";
    }
  }
}
@media (min-width: 900px) {
  .documentation-page__menu {
    align-self: start;
    border-right: 1px solid var(--color-separator);
    display: flex;
    flex-direction: column;
    grid-area: menu;
    max-height: calc(100dvh - var(--height-page-navigation));
    overflow-y: auto;
    padding: var(--spacing-content-vertical) var(--spacing-half);
    position: sticky;
    top: var(--height-page-navigation);
  }

  .documentation-page__menu__content {
    display: flex;
    flex-direction: column;
    row-gap: var(--spacing-2x);
  }

  .documentation-page__menu__link {
    border: 2px solid transparent;
    padding: var(--spacing-half) var(--spacing-base);
    text-decoration: none;
  }

  .documentation-page__menu__link.documentation-page__menu__link--active {
    background-color: var(--color-highlight);
    /* border-color: var(--color-border); */
    border-radius: 20px 30%;
    box-shadow:
      2px 2px 0 #ffff0022,
      4px 4px 0 #ff000022,
      6px 6px 0 #0000ff22;
  }

  .documentation-page__menu__section {
    display: flex;
    flex-direction: column;
  }

  .documentation-page__menu__section.documentation-page__menu__section--level-0
    > .documentation-page__menu__section__title {
    padding-top: 0;
  }

  .documentation-page__menu__section.documentation-page__menu__section--level-2 {
    padding-left: var(--spacing-base);
  }

  .documentation-page__menu__section__content {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
  }

  .documentation-page__menu__section__sub-title {
    padding: var(--spacing-half) var(--spacing-base);
  }

  .documentation-page__menu__section__title {
    font-weight: bold;
    padding: var(--spacing-half) var(--spacing-base);
  }

  .documentation-page__menu__title {
    display: none;
  }
}

.documentation-page__related-pages {
  background-color: var(--color-body-background);
  border-top: 1px solid var(--color-separator);
  bottom: 0;
  column-gap: var(--spacing-2x);
  display: grid;
  grid-template-areas: "prev next";
  grid-template-columns: repeat(2, 1fr);
  position: sticky;
}

.documentation-page__related-pages__link {
  align-items: center;
  column-gap: var(--spacing-half);
  display: flex;
  font-style: italic;
  padding: var(--spacing-base) 0;
  text-decoration: none;
}

.documentation-page__related-pages__link.documentation-page__related-pages__link--next {
  grid-area: next;
  justify-content: end;
  text-align: right;

  &::after {
    content: "→";
  }
}

.documentation-page__related-pages__link.documentation-page__related-pages__link--prev {
  grid-area: prev;

  &::before {
    content: "←";
  }
}

.documentation-page__toc {
  @media (max-width: 900px) {
    display: none;
  }
  @media (min-width: 900px) {
    align-self: start;
    display: flex;
    flex-direction: column;
    grid-area: toc;
    padding: var(--spacing-content-vertical) 0 var(--spacing-base-plus-half)
      var(--spacing-base);
    position: sticky;
    top: var(--height-page-navigation);

    a {
      text-decoration: none;
    }
  }
}

.documentation-page__toc__content {
  display: flex;
  flex-direction: column;
  row-gap: var(--spacing-half);
  padding: 0 var(--spacing-half) 0 var(--spacing-base);
}

.documentation-page__toc__link-list {
  display: flex;
  flex-direction: column;
}

.documentation-page__toc__link-list__link {
  &:last-of-type {
    padding-top: var(--spacing-half);
  }
  &:not(:last-of-type) {
    padding: var(--spacing-half) 0;
  }
}

.documentation-page__toc__title {
  background-image: url("../media/icon-table-of-contents.svg");
  background-position: left center;
  background-repeat: no-repeat;
  background-size: 20px;
  font-weight: bold;
  padding-left: calc(20px + var(--spacing-half));
}

